k8s/aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    app.kubernetes.io/name: open-data-platform
    app.kubernetes.io/environment: dev
