k8s/aks/keyvault-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __AKS_KEY_VAULT_SYNC_DEPLOYMENT_NAME__
  namespace: __NAMESPACE__
  labels:
    app.kubernetes.io/name: __AKS_KEY_VAULT_SYNC_DEPLOYMENT_NAME__
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: __AKS_KEY_VAULT_SYNC_DEPLOYMENT_NAME__
  template:
    metadata:
      labels:
        app.kubernetes.io/name: __AKS_KEY_VAULT_SYNC_DEPLOYMENT_NAME__
    spec:
      containers:
        - name: keyvault-sync
          image: mcr.microsoft.com/oss/busybox/busybox:1.33.1
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - sleep infinity
          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: __AKS_KEY_VAULT_PROVIDER_CLASS_NAME__
