k8s/aks/datahub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datahub
  namespace: __NAMESPACE__
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - datahub.__FRONTEND_DOMAIN__
      secretName: datahub-tls
  rules:
    - host: datahub.__FRONTEND_DOMAIN__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datahub-frontend
                port:
                  number: 9002
